
Fixes:
- Maroon Valley chest which respawned on room entry
- Removed barrier event in Para Island since barrier has been removed
- Vermillion Wasteland Hub is not inaccessible until a use is given to it (also to prevent crashes)
- So'najiz Temple gauntlet barrier now opens after the fight instead of after opening the chests
- Visited maps option now works, on creating a new save file

Extra Patches:
- Extra Barriers: Adds new ways to move around from Rhombus Square, also adding reverse barriers to make some shades more usable from the get go
- Closed Gaia: Adds more options to divide Gaia's Garden areas with the new East/West Gaia Passes, and the Azure Drop / Purple Bolt Shades
- DLC: Base DLC (mostly dungeon) compatbility prepared for future patches

Compatibility:
- Re-added CC-Alybox as dependency
- Added Item-Api as dependency for handling custom items (ex. new Gaia Passes)
- Separated CCItemRandomizer compatibility into its own branch

# v0.4.2
Fixes: 
- Fixed getting stuck on the chest in Maroon Valley's Torn Road if you don't have the corresponding lock.
- Made the visuals for Para Island barrier actually correlate to the barrier deactivated.
- Removed Schneider interactions on guild area to avoid softlocking the Guild Pass check. Guild area should still be accesible with Guild Pass, and First Scholars with Guild Pass and Schneider check (which requires Mine Pass).
- Removed the Quiz and some remainders from First Scholars. It will be more flat than before sorry about that.

Add: 
- Having maps visited by default should now be an option toggeable in Options for CCItemRandomizer, and a yaml setting for Archipelago CCMultiworldRandomizer.

# v0.4.1
Fixes: 
- Having Emilie in party on the Rookie Harbor intro cutscene would softlock the game.
- Steamy Booze and Steaks second quest now requires Flame Shade instead of Faj'ro.
- D'kar 5th quest requirements now properly work.
- Fixed typo on Temple Mine key intro cutscene.